# tinyusb

./: CMakeLists.txt
examples/device/cdc_dual_ports/src/: main.c  usb_descriptors.c
examples/device/cdc_uac2/src/: cdc_app.c  tusb_config.h  uac2_app.c  usb_descriptors.c
examples/device/uac2_headset/src/: tusb_config.h  usb_descriptors.c
hw/bsp/stm32u5/: family.c
hw/bsp/stm32u5/boards/stm32u5a5nucleo/: board.h
src/portable/synopsys/dwc2/: dcd_dwc2.c  dwc2_stm32.h
